# hypertextcpp

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build_shared_template.cmake  hypertextcpp.cmake
.github/workflows/: build_and_test.yml  release.yml
examples/: CMakeLists.txt
examples/01/: todolist.htcpp  todolist_printer.cpp
examples/02/: todolist.htcpp  todolist_printer.cpp
examples/03/: todolist.htcpp  todolist_printer.cpp
examples/04/: CMakeLists.txt  todolist_printer.cpp
examples/05/: CMakeLists.txt  todolist.htcpp  todolist_printer.cpp
examples/ex_01/: CMakeLists.txt  todolist.h  todolist.htcpp
examples/ex_02/: CMakeLists.txt  todolist.h  todolist.htcpp  todolist_printer.cpp
examples/ex_03/: CMakeLists.txt  todolist.h
examples/ex_04/: CMakeLists.txt  todolist.h  todolist.htcpp
examples/ex_05/: CMakeLists.txt  todolist.htcpp  todolist_printer.cpp
examples/ex_06/: CMakeLists.txt  todolist.htcpp  todolist_printer.cpp
examples/ex_07/: CMakeLists.txt  pageparams.h  todolist.htcpp
functional_tests/: ci.cfg  lunchtoast.cfg
functional_tests/example_1/: test.toast
functional_tests/example_2/: test.toast
functional_tests/example_3/: test.toast
functional_tests/example_4/: test.toast
functional_tests/example_5/: test.toast
shared_lib_api/include/hypertextcpp/: itemplate.h  templateloader.h  templateloadingerror.h
shared_template/: CMakeLists.txt
src/: codenode.cpp  codenode.h  control_flow_statement_node.cpp  control_flow_statement_node.h  document_node_interface_access.h  errors.h  generated_file_type.h  header_and_source_transpiler_renderer.cpp  header_and_source_transpiler_renderer.h  idocumentnode.h  idocumentnoderenderer.h  inodecollection.h  irendered_as_string_part.h  itranspiler_renderer.h  macronode.cpp  macronode.h  main.cpp  mainpage.h  nameutils.cpp  nameutils.h  node_utils.cpp  node_utils.h  nodeextension.cpp  nodeextension.h  nodereader.cpp  nodereader.h  procedurenode.cpp  procedurenode.h  prototypenode.cpp  prototypenode.h  sectionnode.cpp  sectionnode.h  shared_lib_transpiler_renderer.cpp  shared_lib_transpiler_renderer.h  sharedlibtranspiler.cpp  sharedlibtranspiler.h  single_header_transpiler_renderer.cpp  single_header_transpiler_renderer.h  singleheadertranspiler.cpp  singleheadertranspiler.h  (+13 more)
tests/: CMakeLists.txt  test_codenode.cpp  test_macronode.cpp  test_nameutils.cpp  test_procedurenode.cpp  test_prototypenode.cpp  test_sectionnode.cpp  test_tagnode.cpp  test_utils.cpp
